# detektr

./: .coveragerc  .dockerignore  .env  .env.example  .env.sentinel  .env.sops  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .sops.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  MEMORY.md  Makefile  PROJECT_CONTEXT.md  PROJECT_STATUS.md  RAPORT_ANALIZY_WDROZEN.md  RAPORT_FAZA1_DEPLOYMENT_STATUS.md  README.md  architektura_systemu.md  codecov.yml  deployment_status.md  docker-compose.broker.yml  docker-compose.db.yml  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.redis-ha.yml  docker-compose.rtsp.yml  docker-compose.sentinel-override.yml  docker-compose.storage.yml  docker-compose.test.yml  docker-compose.volumes.yml  docker-compose.yml  manual_integration_test.py  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: .trigger  dependabot.yml
config/: postgres_exporter_queries.yaml  redis-master.conf  redis-slave.conf  redis.conf  sentinel.conf
dashboards/: README.md  frame-buffer-integration.json  frame-tracking.json
docker/: README.md
docs/: ALL_PHASES_COMPLETION_REPORT.md  ARCHITECTURE.md  BUILD_ERRORS_ANALYSIS.md  DEPLOYMENT_RECOMMENDATIONS.md  DEVELOPMENT.md  GITHUB_ACTIONS_OPTIMIZATION_PLAN.md  GITHUB_SECRETS_SETUP.md  MAKEFILE_GUIDE.md  MANUAL_DEPLOYMENT.md  NAMING_UNIFICATION_STATUS.md  PHASE4_GHCR_CLEANUP_REPORT.md  PHASE5_DEPLOYMENT_AUTOMATION_REPORT.md  PHASE6_DOCUMENTATION_REPORT.md  PHASE7_MAKEFILE_UNIFICATION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  REDIS_HA_MIGRATION_PLAN.md  SECRETS_MANAGEMENT.md  TASK_TEMPLATE.md  TROUBLESHOOTING.md  WORKFLOW_CONSOLIDATION_PLAN.md  WORKFLOW_CONSOLIDATION_STATUS.md  base-service-guide.md  continuous-audit-framework.md  dev-environment.md  docker-setup-notes.md  frame-buffer-implementation-plan.md  frame-buffer-integration-validation.md  frame-buffer-redesign.md  frame-buffer-v2-processor-api.md  frame-tracking-guide.md  git-repository-setup-notes.md  github-workflows-analysis.md  high-priority-fixes.md  index.md  nvidia-setup-notes.md  observability-networking-fix.md  observability-stack-notes.md  phase-1-completion-notes.md  phase-2-progress.md  processor-client-migration-guide.md  (+2 more)
migrations/: 001_frame_metadata_schema.sql
scripts/: bootstrap-nebula.sh  check-deployment-security.sh  check-ports.sh  clean-docker-space.sh  db-monitor.sh  deploy-from-runner.sh  deploy-local-on-nebula.sh  deploy-local.sh  deploy-rtsp-capture.sh  deploy-to-nebula.sh  deploy.sh  deployment-circuit-breaker.sh  deprecated-warning.md  docker-health-check.sh  emergency-rtsp-fix.sh  fix-redis-deployment.sh  fix-rtsp-deployment.sh  github-runner-recovery.service  github-runner.service  health-check-all.sh  install-runner-monitoring.sh  manual-deploy.sh  migrate-docker-compose.sh  migrate-workflows.sh  notify-admin@.service  nuclear-cleanup.sh  requirements-trace-analyzer.txt  rtsp-fix-readme.md  runner-auto-recovery.sh  runner-health-check.sh  runner-health.cron  setup-github-secrets.sh  test-deploy.sh  test-metadata-performance.py  test-processor-manually.sh  test-rtsp-deployment.sh  trace_analyzer.py  validate-e2e-flow.sh  validate-frame-buffer-consumer.sh  validate-frame-distribution.sh  (+6 more)
services/rtsp-capture/: .dockerignore  .flake8  BLOCK_0_SUMMARY.md  BLOCK_1_REVIEW.md  BUILD_TRIGGER  CAMERA_SETUP.md  Dockerfile  INSTALL.md  README.md  api_spec.py  conftest.py  docker-compose.test.yml  mypy.ini  proof_of_concept.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docker.txt  requirements-prod.txt  requirements.txt  rtsp_simulator.py  test_environment.py
services/rtsp-capture/src/: __init__.py  force_rebuild.txt  frame_buffer.py  frame_capture.py  frame_extractor.py  health.py  main.py  main.py.backup  observability.py  redis_queue.py  rtsp_connection.py  shared  simple_health.py  simple_redis_queue.py
services/rtsp-capture/src/shared/: __init__.py  base_service.py
services/rtsp-capture/src/shared/benchmarks/: regression.py
services/rtsp-capture/src/shared/kernel/domain/: __init__.py  frame_data.py
services/rtsp-capture/src/shared/kernel/events/: __init__.py
services/rtsp-capture/src/shared/metrics/: README.md
services/rtsp-capture/src/shared/queue/: backpressure.py  benchmark_backpressure.py  dlq.py  metrics.py  metrics_endpoint.py
services/rtsp-capture/src/shared/serializers/: benchmark.py  frame_serializer.py
services/rtsp-capture/src/telemetry/: __init__.py  decorators.py  metrics.py
services/rtsp-capture/tests/: conftest.py  test_frame_buffer.py  test_frame_extractor.py  test_health.py  test_observability.py  test_redis_integration.py  test_rtsp_baseline.py  test_rtsp_connection.py  test_rtsp_prerequisites.py
services/shared/base-processor/: Dockerfile.example  Dockerfile.processor  LICENSE  MANIFEST.in  README.md  build.sh  docker-compose.processor.yml  pyproject.toml  requirements-dev.txt  requirements.txt
services/shared/base-processor/docs/: PROCESSOR_TEMPLATE.md  architecture.md  requirements-analysis.md
services/shared/base-processor/src/base_processor/: __init__.py  base.py  batch_processor.py  exceptions.py  logging.py  metrics.py  metrics_decorators.py  pipeline.py  resource_manager.py  retry.py  state_machine.py  tracing.py
services/shared/base-processor/tests/benchmarks/: __init__.py  test_performance.py  test_processor_benchmarks.py
services/shared/base-processor/tests/fixtures/: __init__.py  test_frame_fixtures.py
services/shared/base-processor/tests/unit/: test_base_processor.py  test_lifecycle.py  test_observability.py  test_retry.py
services/shared/frame-tracking/: README.md  pyproject.toml
services/shared/frame-tracking/src/frame_tracking/: __init__.py  context.py  frame_id.py  metadata.py  search.py
services/shared/frame-tracking/tests/: test_context.py  test_frame_id.py  test_metadata.py
socmedia/: .gitkeep
src/: __init__.py
tests/: __init__.py  conftest.py  test_docker_compose_update.py
(+591 files in other folders)
